# Imavromage

./: .gitignore
cli/: main.cpp  meson.build
include/ivmg/: ivmg.hpp
include/ivmg/codecs/: codecs.hpp  decoder.hpp  encoder.hpp  errors.hpp
include/ivmg/core/: formats.hpp  image.hpp  pixel.hpp
include/ivmg/filters/: gaussian_blur.hpp
include/ivmg/imgproc/: filter.hpp  gaussian_blur.hpp
src/: ivmg.cpp  logger.hpp  meson.build  utils.hpp
src/codecs/: codecs.cpp  codecs.hpp  pam.cpp  pam.hpp  png.cpp  png.hpp  qoi.cpp  qoi.hpp
src/codecs/pam/: pam.cpp  pam.hpp
src/codecs/png/: png.cpp  png.hpp
src/codecs/qoi/: qoi.cpp  qoi.hpp
src/common/: logger.hpp  macros.hpp  utils.hpp
src/core/: image.cpp
tests/: meson.build
