# png_test = executable(
#   'png_test',
#   [
#     'common.cpp',
#     'png/main.cpp',
#     'png/lodepng.cpp'
#   ],
#   include_directories: include_directories('.', '../include', 'png'),
#   dependencies: [def_dep],
#   link_with: [ivmg_lib]
# )

# png_filters = {
#   'zero': 0,
#   'sub': 1,
#   'up': 2,
#   'average': 3,
#   'paeth': 4,
#   'all': 5
# }

# foreach name, val : png_filters
#   test('PNG(' + name + ')', png_test, args: [val.to_string()])
# endforeach
